ts support better

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
-    "include": ["./*"],
+    "include": ["./src/*"],
     "compilerOptions": {
       "allowJs": true,
-      "declaration": true,
-      "emitDeclarationOnly": true,
-      "outDir": "src"
+      "outDir": "dist"
     }
   }
