--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "is-object-equal",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Check if two objects are equal",
-  "main": "index.js",
-  "types": "./src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
