--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/KartikeSingh/is-object-equal/issues"
   },
-  "homepage": "https://github.com/KartikeSingh/is-object-equal#readme",
-  "devDependencies": {
-    "typescript": "^4.4.3"
-  }
+  "homepage": "https://github.com/KartikeSingh/is-object-equal#readme"
 }
